--- a/week_3/week_3.ipynb
+++ b/week_3/week_3.ipynb
@@ -678,7 +678,7 @@
     "\r\n",
     "# tmin is when you start the epoch and tmax is when you end it\r\n",
     "epochs = mne.Epochs(raw, events, event_dict, tmin=-.2, tmax=0.5, picks=picks,\r\n",
-    "                    baseline=None, reject=reject_criteria, preload=True)\r\n"
+    "                    baseline=(None,0), reject=reject_criteria, preload=True)\r\n"
    ],
    "outputs": [
     {
